--- a/electron/index.html
+++ b/electron/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Electron+Svelte+Esbuild</title>
+  <title>Electron+Svelte+TypeScript+Esbuild</title>
   <link href="public/bundle.css" rel="stylesheet">
   <script type="module" src="public/bundle.js"></script>
 </head>
